--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,9 @@
+numpy==1.23.4
 packaging==21.3
+pandas==1.5.0
 Pillow==9.2.0
 pyparsing==3.0.9
 pytesseract==0.3.10
+python-dateutil==2.8.2
+pytz==2022.4
+six==1.16.0
